# mathfinance

auto/: main.py  pyproject.toml  pytest.ini
auto/src/: data.py  models.py  rates.py  util.py
auto/src/client/: console.py  question.py
auto/src/client/flow/: main.py
auto/src/client/flow/topics/: form.py  geometric_gradient.py  linear_gradient.py  mutually.py  projects.py  rate.py
auto/src/metrics/: bussiness.py  geometric_gradient.py  gradients.py  money_by_time.py  mutually.py  project.py  rank.py
auto/tests/src/: test_rates.py
auto/tests/src/metrics/: test_bussiness.py  test_geometric_gradient.py  test_gradients.py  test_money_by_time.py
finance/: geometric_gradient.py  models.py  rates.py  terms.py
