[tool.poetry]
name = "auto"
version = "0.1.0"
description = ""
authors = ["BuildTools <unconfigured@null.spigotmc.org>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
numpy-financial = "^1.0.0"
black = "^21.9b0"
python-dateutil = "^2.8.2"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
